--- a/dubbo-server/pom.xml
+++ b/dubbo-server/pom.xml
@@ -15,6 +15,8 @@
     <description>dubbo 服务端</description>
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
     <dependencies>
         <dependency>
