--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <spring.cloud.version>2.2.0.RELEASE</spring.cloud.version>
         <spring.boot.version>2.3.0.RELEASE</spring.boot.version>
         <spring.cloud.alibaba.version>2.2.0.RELEASE</spring.cloud.alibaba.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencyManagement>
